CHANGES
=======

* added pl/sql scripts for automatic loading in prod
* payload details included
* added el67 support, tested sqcdriver and added basic config for driver
* package, stored procs and schema tables for sqc project
* added SFTP module for file transfer - el7/el65 tested
* mods to qcm_api to work with el65/py26, el7/py27
* added response and sqcbase modules, tested on el7
* Initial commit