@@ -1,17 +1,16 @@
-#!/usr/bin/env python
+#!/bin/python
 
 from driver import sqcdriver
-from optparse import OptionParser
+import argparse
 
 if __name__ == "__main__":
 
-    opt = OptionParser()
-    opt.add_option ("-c", "--config", help="path to configuration file",
-            action="store", type="string", dest="conf" )
+    #opt = OptionParser()
+    opt = argparse.ArgumentParser()
+    opt.add_argument ("-c", "--config", dest="conf", help="path to configuration file" )
+    opt.add_argument("-l", "--log", dest="logLevel", choices=['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL', 'VERBOSE'], default='INFO', help="Set the logging level")
+    args = opt.parse_args()
 
-    (options, args) = opt.parse_args()
-
-    driver = sqcdriver.sqc_driver(options)
+    driver = sqcdriver.sqc_driver(args)
     driver.run()
-
 
