@@ -1,13 +1,105 @@
+; ---------------------------------------------------------------------------
+; purpose: configuration file for SC-SQC QCM data movement from CDW
+;          basic configuration to perform payload extraction and transfer
+; author : Venkat Kaushik
+; created: July 05 2016
+; ---------------------------------------------------------------------------
+
+[DEFAULT]
+base_path: /files
+temp_path: /tmp
+log_path: /var/log/scsqc/scsqc.log
+
+; ---- section: database connection
 [db]
-tns_env: /files
+
+; set environment to spawn db connection
+tns_env: %(base_path)s
+
+; connection string for client connecting to CDW
 app: /@myserv
 
-[sftp]
-file_prefix: scsqc_extr
-file_suffix: csv
-dir_local: ./
-dir_remote: something 
+; ---- section: payload extraction ---------------
+[payload]
 
-[qcm]
-and: this
+;-------------------------------------------------
+; QCM payload participating sites
+; 1002 = PH (Baptist Easley)
+; 1004 = MUSC
+; 1007 = SRHS (Med Center Only)
+;-------------------------------------------------
+
+site_id: 1002 
+
+;-------------------------------------------------
+; default number of prior days (from now) to  
+; include for procedure end dates
+; 
+; NOTE: this default is used only if the current 
+; extract is within 24 hrs of previous successful 
+; (state = 'F' = successful SFTP transfer) 
+; extract for this particular site
+;-------------------------------------------------
+
+ndays_txstart: 2
+
+;-------------------------------------------------
+; default MAX number of prior days (from now) to
+; include for procedure end dates. QCM discards
+; all procedures performed 120 days prior to now
+; so we include that restriction
+; NOTE1: this is the default in stored procedure
+; NOTE2: use it ONLY to override the default
+;        AND if you are absolutely sure we need it
+;-------------------------------------------------
+
+ndays_max_txstart: 120
+
+
+;-------------------------------------------------
+; csv header file (template) QCM provided us with.
+; we populate the csv file with partial or complete
+; payload per columns specified in header.
+; full path to this template header file
+;-------------------------------------------------
+
+qcm_header_path: %(base_path)s/SCSQC_QCMitt_Empty.csv
+
+
+;-------------------------------------------------
+; batch control for fetching rows using pl/sql 
+; cursor object. at this time we do NOT expect
+; the payload to be large (ie > 10K rows), but
+; in case it exceeds a certain limit, the batch
+; control allows for restricing the number of
+; batches and size of each batch and cap payload
+; 
+;   NOTE: if the number of rows returned
+;    by the stored procedure exceeds
+;   (batch_maxnum x batch_size), the extract 
+;   is automatically capped to that many rows. 
+;   NOTE2: its safe to leave the defaults untouched
+;-------------------------------------------------
+
+; default batch size (ie, records per batch)
+batch_size: 500
+
+; default number of batches
+batch_maxnum: 20
+
+; payload file local staging directory
+csv_local_path: %(temp_path)s
+
+; csv file prefix
+csv_file_prefix: qcm_
+
+
+; ---- section: payload transfer using sftp 
+[sftp]
+
+host: hssc-cdwr3-hsie-d.clemson.edu
+port: 22
+user: transfer
+pubkey: %(base_path)s/hsie-d.key
+remotedirs: /home/%(user)s/testing/large/file/, /home/%(user)s/testing/large/file/
 
